vault-ns.yml
kind: Namespace
apiVersion: v1
metadata:
  name: vault
  annotations:
    linkerd.io/inject: enabled
