vault-server-test-pod-patch.yml
apiVersion: v1
kind: Pod
metadata:
  name: "vault-server-test"
  namespace: vault
  annotations:
    "helm.sh/hook": test
    "linkerd.io/inject": disabled
