vault-vsvc.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vault
spec:
  hosts:
  - "vault.home.lan"
  gateways:
  - vault
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: vault-ui
        port:
          number: 8200
